# projects

Bioq_exp_III/: ignoreme.txt  ignoreme2.txt  kinetic_visualizer.ipynb  test.ipynb
Bioq_exp_III/.ipynb_checkpoints/: ExpIII_quantitative-checkpoint.ipynb  Untitled-checkpoint.ipynb
Bioq_exp_III/SignalQ/: BYG1.tsv  BYG2.tsv  BYG3.tsv  BYG4.tsv  BYPL2G2.txt  KOG1.tsv  KOG2.tsv  KOG3.tsv  KOG4.tsv  KOPL2G2.txt  Preparation_KEGG.txt  signalQ.py  signalQ_BqExpIII.ipynb
Bioq_exp_III/geneddit/: GLO1_DNA.tsv  GLO1_flanking.fsa  Genome analyser.ipynb  NM_001182359.1.fa  (+6 more)
Bioq_exp_IV/: FoldEnrichment.ipynb  NFkB.ipynb  Simulação_ExpIV.ipynb  SteadyState.py  bp_ciclos_hela_simp_tab.txt  bp_ciclos_simp_tab.txt  dorothea_AB.txt  interactions_omni.txt  stimator_icc.txt  stimator_w.txt
Omics_Project/: 1_Project_OmicsPy.ipynb  2_Project_GSE30528.R  3_dataprocess.py  4_Project_GlomAnalysis.R  Diff_analysis_GSE30528  collapsed_DEGA_GSE30528.txt  feature.data
QMSB_simulation/: QMSB_summary_notebook.ipynb  SteadyState.py
ddPPR_disease_gene_ranker/: README.md  cf_related_disease_network_analysis.ipynb  diffusion_algorithm_for_gene_ranking_in_disease.ipynb  pyproject.toml
ddPPR_disease_gene_ranker/data/: PM_df_membrane_interactors.xlsx  PM_wt_membrane_interactors.xlsx
ddPPR_disease_gene_ranker/ddPPR/: __init__.py  ddPPR.py  functions.py  semantic_analysis.py
ddPPR_disease_gene_ranker/ddPPR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ddPPR_disease_gene_ranker/notebooks/: README.md  UniprotID_Genename_mapping.csv  diffusion_algorithm_for_gene_ranking_in_disease.ipynb
(+6 files in other folders)
